--- a/proyectos/1/RodriguezAlfonso-ArriagaEmilia/Proyecto1/src/main/resources/sistop/_20252/projectStart.fxml
+++ b/proyectos/1/RodriguezAlfonso-ArriagaEmilia/Proyecto1/src/main/resources/sistop/_20252/projectStart.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: black; -fx-border-width: 10; -fx-border-color: lime;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: black; -fx-border-width: 10; -fx-border-color: lime;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sistop._20252.MainMenuController">
    <children>
       <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="700.0" prefWidth="1061.0" spacing="10.0">
          <children>
@@ -32,7 +32,7 @@
                   <Font name="Consolas Bold" size="37.0" />
                </font>
             </Label>
-            <Button fx:id="simButton" mnemonicParsing="false" prefHeight="74.0" prefWidth="285.0" style="-fx-background-color: lime;" text="INICIAR SIMULACIÓN">
+            <Button fx:id="simButton" mnemonicParsing="false" prefHeight="74.0" prefWidth="285.0" style="-fx-background-color: lime;" text="INICIAR SIMULACIÓN" onAction="#onClickSimButton">
                <VBox.margin>
                   <Insets top="50.0" />
                </VBox.margin>
