--- a/proyectos/1/RodriguezAlfonso-ArriagaEmilia/Proyecto1/src/main/resources/sistop/_20252/threadExecution.fxml
+++ b/proyectos/1/RodriguezAlfonso-ArriagaEmilia/Proyecto1/src/main/resources/sistop/_20252/threadExecution.fxml
@@ -2,16 +2,22 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: black; -fx-border-width: 10; -fx-border-color: lime;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: black; -fx-border-width: 10; -fx-border-color: lime;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="sistop._20252.ExecutionController">
    <children>
       <Pane layoutX="9.0" layoutY="9.0" prefHeight="445.0" prefWidth="383.0" style="-fx-border-color: magenta; -fx-border-width: 10;">
          <children>
-            <HBox layoutX="9.0" layoutY="114.0" prefHeight="315.0" prefWidth="364.0" />
+            <HBox layoutX="9.0" layoutY="114.0" prefHeight="315.0" prefWidth="364.0">
+               <children>
+                  <ImageView fx:id="t1S1" fitHeight="322.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="t1S2" fitHeight="321.0" fitWidth="118.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="t1S3" fitHeight="321.0" fitWidth="121.0" pickOnBounds="true" preserveRatio="true" />
+               </children></HBox>
             <Label text="Mesa 1" textFill="MAGENTA">
                <font>
                   <Font name="Consolas Bold" size="33.0" />
@@ -29,7 +35,12 @@
       </Pane>
       <Pane layoutX="388.0" layoutY="10.0" prefHeight="443.0" prefWidth="351.0" style="-fx-border-width: 10; -fx-border-color: blue;">
          <children>
-            <HBox layoutX="9.0" layoutY="106.0" prefHeight="318.0" prefWidth="334.0" />
+            <HBox layoutX="9.0" layoutY="106.0" prefHeight="318.0" prefWidth="334.0">
+               <children>
+                  <ImageView fx:id="t2S1" fitHeight="329.0" fitWidth="115.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="t2S2" fitHeight="329.0" fitWidth="106.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="t2S3" fitHeight="331.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
+               </children></HBox>
             <Label text="Mesa 2" textFill="BLUE">
                <font>
                   <Font name="Consolas Bold" size="34.0" />
@@ -47,7 +58,12 @@
       </Pane>
       <Pane layoutX="732.0" layoutY="10.0" prefHeight="447.0" prefWidth="340.0" style="-fx-border-color: yellow; -fx-border-width: 10;">
          <children>
-            <HBox layoutX="8.0" layoutY="112.0" prefHeight="325.0" prefWidth="326.0" />
+            <HBox layoutX="8.0" layoutY="112.0" prefHeight="325.0" prefWidth="326.0">
+               <children>
+                  <ImageView fx:id="t3S1" fitHeight="326.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="t3S2" fitHeight="326.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="t3S3" fitHeight="325.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true" />
+               </children></HBox>
             <Label text="Mesa 3" textFill="YELLOW">
                <font>
                   <Font name="Consolas Bold" size="33.0" />
@@ -56,7 +72,7 @@
                   <Insets left="15.0" top="10.0" />
                </padding>
             </Label>
-            <Label layoutX="19.0" layoutY="52.0" text="Sample text" textFill="YELLOW">
+            <Label fx:id="thirdTable" layoutX="19.0" layoutY="52.0" text="Sample text" textFill="YELLOW">
                <font>
                   <Font name="Consolas" size="15.0" />
                </font>
@@ -70,15 +86,37 @@
                   <Font name="System Bold" size="26.0" />
                </font>
             </Label>
+            <Label fx:id="firstCubicle" layoutX="14.0" layoutY="50.0" text="Sample text" textFill="RED">
+               <font>
+                  <Font name="Consolas" size="15.0" />
+               </font>
+            </Label>
+            <HBox layoutX="11.0" layoutY="68.0" prefHeight="182.0" prefWidth="524.0">
+               <children>
+                  <ImageView fx:id="c1S1" fitHeight="182.0" fitWidth="271.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="c1S2" fitHeight="185.0" fitWidth="255.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </HBox>
          </children>
       </Pane>
       <Pane layoutX="556.0" layoutY="451.0" prefHeight="260.0" prefWidth="515.0" style="-fx-border-color: red; -fx-border-width: 10;">
          <children>
-            <Label layoutX="19.0" layoutY="17.0" text="Cubículo 2" textFill="RED">
+            <Label layoutX="14.0" layoutY="14.0" text="Cubículo 2" textFill="RED">
                <font>
                   <Font name="System Bold" size="26.0" />
                </font>
             </Label>
+            <Label fx:id="secondCubicle" layoutX="14.0" layoutY="46.0" text="Sample text" textFill="RED">
+               <font>
+                  <Font name="Consolas" size="15.0" />
+               </font>
+            </Label>
+            <HBox layoutX="10.0" layoutY="64.0" prefHeight="189.0" prefWidth="495.0">
+               <children>
+                  <ImageView fx:id="c2S1" fitHeight="187.0" fitWidth="248.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="c2S2" fitHeight="188.0" fitWidth="247.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </HBox>
          </children>
       </Pane>
    </children>
