--- a/proyectos/1/RodriguezAlfonso-ArriagaEmilia/Proyecto1/src/main/resources/sistop/_20252/threadExecution.fxml
+++ b/proyectos/1/RodriguezAlfonso-ArriagaEmilia/Proyecto1/src/main/resources/sistop/_20252/threadExecution.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -78,7 +80,7 @@
             </Label>
          </children>
       </Pane>
-      <Pane layoutX="11.0" layoutY="451.0" prefHeight="259.0" prefWidth="546.0" style="-fx-border-color: red; -fx-border-width: 10};">
+      <Pane layoutX="11.0" layoutY="451.0" prefHeight="259.0" prefWidth="462.0" style="-fx-border-color: red; -fx-border-width: 10};">
          <children>
             <Label layoutX="18.0" layoutY="14.0" prefHeight="45.0" prefWidth="137.0" text="Cubículo 1" textFill="RED">
                <font>
@@ -90,15 +92,15 @@
                   <Font name="Consolas" size="15.0" />
                </font>
             </Label>
-            <HBox layoutX="11.0" layoutY="68.0" prefHeight="182.0" prefWidth="524.0">
+            <HBox layoutX="11.0" layoutY="68.0" prefHeight="185.0" prefWidth="437.0">
                <children>
-                  <ImageView fx:id="c1S1" fitHeight="182.0" fitWidth="271.0" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fx:id="c1S2" fitHeight="185.0" fitWidth="255.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="c1S1" fitHeight="182.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="c1S2" fitHeight="185.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </HBox>
          </children>
       </Pane>
-      <Pane layoutX="556.0" layoutY="451.0" prefHeight="260.0" prefWidth="515.0" style="-fx-border-color: red; -fx-border-width: 10;">
+      <Pane layoutX="609.0" layoutY="451.0" prefHeight="260.0" prefWidth="462.0" style="-fx-border-color: red; -fx-border-width: 10;">
          <children>
             <Label layoutX="14.0" layoutY="14.0" text="Cubículo 2" textFill="RED">
                <font>
@@ -110,13 +112,28 @@
                   <Font name="Consolas" size="15.0" />
                </font>
             </Label>
-            <HBox layoutX="10.0" layoutY="64.0" prefHeight="189.0" prefWidth="495.0">
+            <HBox layoutX="10.0" layoutY="64.0" prefHeight="189.0" prefWidth="433.0">
                <children>
-                  <ImageView fx:id="c2S1" fitHeight="187.0" fitWidth="248.0" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fx:id="c2S2" fitHeight="188.0" fitWidth="247.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="c2S1" fitHeight="187.0" fitWidth="221.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="c2S2" fitHeight="188.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </HBox>
          </children>
       </Pane>
+      <Button fx:id="exitButton" layoutX="476.0" layoutY="529.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="129.0" style="-fx-background-color: lime;" text="Salir" onAction="#exitApp">
+         <font>
+            <Font name="Consolas" size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="newThreadButton" layoutX="476.0" layoutY="581.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="129.0" style="-fx-background-color: lime;" text="Crear hilo" onAction="#createNewThread">
+         <font>
+            <Font name="Consolas" size="16.0" />
+         </font>
+      </Button>
+      <TextField fx:id="threadNameField" alignment="CENTER" layoutX="477.0" layoutY="631.0" prefHeight="38.0" prefWidth="127.0" promptText="Nombre del hilo..." style="-fx-background-color: lime;">
+         <font>
+            <Font name="Consolas" size="11.0" />
+         </font>
+      </TextField>
    </children>
 </Pane>
