Añadiendo documentación y algunos toques finales...

--- a/proyectos/1/RodriguezAlfonso-ArriagaEmilia/Proyecto1/src/main/resources/sistop/_20252/projectStart.fxml
+++ b/proyectos/1/RodriguezAlfonso-ArriagaEmilia/Proyecto1/src/main/resources/sistop/_20252/projectStart.fxml
@@ -40,7 +40,7 @@
                   <Font name="Century Gothic Bold" size="22.0" />
                </font>
             </Button>
-            <Button fx:id="helpButton" mnemonicParsing="false" prefHeight="74.0" prefWidth="285.0" style="-fx-background-color: lime;" text="AYUDA // INSTRUCCIONES">
+            <Button fx:id="helpButton" mnemonicParsing="false" prefHeight="74.0" prefWidth="285.0" style="-fx-background-color: lime;" text="AYUDA // INSTRUCCIONES" onAction="#onClickHelpButton">
                <VBox.margin>
                   <Insets top="25.0" />
                </VBox.margin>
